guestbook/guestbook-ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: guestbook-ui
spec:
  replicas: 0
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: guestbook-ui
  template:
    metadata:
      labels:
        app: guestbook-ui
    spec:
      containers:
      # - image: gcr.io/heptio-images/ks-guestbook-demo:0.1
      - image: quay.io/karasing/redhat-developer-hovercraft:latest
        name: guestbook-ui
        ports:
        # - containerPort: 80
        - containerPort: 8080
