guestbook/guestbook-ui-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: guestbook-ui
spec:
  ports:
  # - port: 80
  - port: 8080
    # targetPort: 80
    targetPort: 8080
  selector:
    app: guestbook-ui
