guestbook/guestbook-ui-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: guestbook-ui
  name: guestbook-ui
spec:
  port:
    # targetPort: 80
    targetPort: 8080
  to:
    kind: Service
    name: guestbook-ui
    weight: 100
